Fixed #141 for now. Still curious about which event did what. basically, I made the click event invisible.

--- a/public/stylesheets/sass/application.sass
+++ b/public/stylesheets/sass/application.sass
@@ -10,3 +10,7 @@
 @import 'chart'
 @import 'dashboard'
 @import 'score'
+
+form#new_scenario
+  outline: none
+  -webkit-tap-highlight-color: rgba(0,0,0,0)
